<resources>
    <string name="app_name">DIPLO</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">type your password here</string>
    <string name="akun">Dont Have an Account? Sign Up</string>
    <string name="email">youremail@example.com</string>
    <string name="re_password">retype password</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="minimum_password" />
    <string name="auth_failed" />
    <string name="btn_link_to_login">Or Login Here</string>
    <string name="title_activity_main">DIPLO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">M Dzakwan Zaky</string>
    <string name="nav_header_subtitle">dzakwanzaky@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_category">Set Category </string>
    <string name="action_delete">Delete</string>
    <string name="action_logout">Log Out</string>
    <string name="fullname">type your full name</string>

    <string name="menu_home">All Notes</string>
    <string name="menu_gallery">Favorites</string>
    <string name="menu_slideshow">Locked Notes</string>
    <string name="menu_tools">Trash</string>
    <string name="menu_share">Kampus</string>
    <string name="menu_send">Hutang</string>
    <string name="menu_organisasi">Organisasi</string>
    <string name="appwidget_text">Ini Widget</string>
    <string name="add_widget">Add widget</string>
</resources>
