<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login1">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="250dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="F"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="#FFFF"
            />
        <EditText
            android:id="@+id/fullname"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/fullname"
            android:gravity="top"
            android:textAlignment="center"
            android:textColorHint="#dcdcdc"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="E"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="#FFFF"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/email"
            android:textAlignment="center"
            android:textColorHint="#dcdcdc" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="P"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="#FFFF"
            />
        <EditText
            android:id="@+id/password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:gravity="top"
            android:textAlignment="center"
            android:textColorHint="#dcdcdc"
            android:inputType="textPassword"
            />
    </LinearLayout>




    <Button

        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_button"
        android:text="@string/sign_up"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:background="#549CA0"
        android:textColor="#FFFF"
        />
    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@null"
        android:text="@string/btn_link_to_login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="15dp" />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />


</LinearLayout>
